ISSUP-6105 add app license post/put APIs
